client/styles/mcm-kui.scss
/*******************************************************************************
 * Licensed Materials - Property of IBM
 * (c) Copyright IBM Corporation 2019. All Rights Reserved.
 *
 * Note to U.S. Government Users Restricted Rights:
 * Use, duplication or disclosure restricted by GSA ADP Schedule
 * Contract with IBM Corp.
 *******************************************************************************/

@import 'fonts';
@import 'header-overrides';

.page {
  height: calc(100% - 3.082rem) // resize to accomodate common header
}

.still-loading { // input bar is visible while kui is loading
  .kui--input-stripe {
    visibility: hidden;
  }
}

#confirm-dialog.bx--modal-container { // carbon v9/v10 conflict fixes
  border-top: none;
  padding: 0;

  .bx--modal-footer {
    padding: 0;
    margin-left: 0;
    margin-right: 0;
  }
}

.result-as-table.result-as-multi-table { // helm status table display corrections
  .repl-result.repl-result {
    display: block;

    .result-table-outer-wrapper {
      display: block;
      margin-top: 1.5rem;

      &:first-of-type {
        margin-top: 0;
      }

      & > div {
        padding-right: 0;
      }
  
      .result-table-outer {
        padding-right: 0;
        width: 100%;
        .result-table {
          width: 100%;
        }
      }
    }
  }
}

#sidecar {
  .sidecar-header {
    .sidecar-header-name {
      .entity-name-line .entity-name { // fix truncation issue for getting started title
        height: auto;
        white-space: pre-wrap;
      }
    }
    .sidecar-top-stripe {
      .bx--tabs li[data-mode="version"] {
        display: none;
      }
    }
  }
  .sidecar-content-container { // helm get sidecar table display corrections
    .result-as-table.repl-result {
      display: block;
  
      .result-table-outer-wrapper {
        margin-top: 1.5rem;
        display: block;
  
        &:first-of-type {
          margin-top: 0;
        }
      }
    }
  }
}

